# cython-blis

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  build-constraints.txt  copy-source-files.sh  dev-requirements.txt  fabfile.py  pyproject.toml  requirements.txt  setup.py  tsan_suppressions.txt
.github/workflows/: build_windows_arm64.yml  cibuildwheel.yml  generate_jsonl.yml  generate_jsonl.yml.disabled  publish_pypi.yml  sanitizers.yml  tests.yml
azure_files/: build.sh
blis/: __init__.py  about.py  benchmark.py  compilation_flags.json  cy.pxd  cy.pyx  dummy.pyx  make_targets.jsonl  py.pyx
blis/_src/include/: blis.h
blis/_src/make/: README.md  darwin-firestorm.jsonl  darwin-generic.jsonl  darwin-x86_64.jsonl  darwin-x86_64_no_skx.jsonl  darwin-x86_64_no_zen2.jsonl  darwin-x86_64_no_zen3.jsonl  gcc.jsonl  linux-arm64.jsonl  linux-arm64_no_sve.jsonl  linux-cortexa15.jsonl  linux-cortexa53.jsonl  linux-cortexa57.jsonl  linux-generic.jsonl  linux-haswell.jsonl  linux-intel64.jsonl  linux-power9.jsonl  linux-sandybridge.jsonl  linux-x86_64.jsonl  linux-x86_64_no_skx.jsonl  linux-x86_64_no_zen2.jsonl  linux-x86_64_no_zen3.jsonl  msvc-x86_64.jsonl  msvc.jsonl  windows-generic.jsonl  windows-x86_64.jsonl  windows-x86_64_no_skx.jsonl  (+2 more)
blis/tests/: common.py  conftest.py  test_dotv.py  test_gemm.py
extra-include/: configure  pthread.h  sched.h
tests/: blis_tests_common.py  test_dotv.py  test_gemm.py
travis/: before_install_linux.sh  before_install_osx.sh  common_utils.sh
(+208 files in other folders)
